# graphrag-brd

./: .kgignore  adv_repo_kg.json  adv_repo_schema_parser.py  construct_kg.ipynb  document_parser.py  ontology.md  parsed_brd.json  pyproject.toml  repo_knowledge_graph.json  repo_schema_parser.py  sample_BRD.docx
