[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "langchain[google-genai]>=1.2.10",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-neo4j>=0.8.0",
    "langchain-text-splitters>=1.1.1",
    "neo4j>=6.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
